fix class header align

--- a/frontEnd/src/Components/ui/Player/ClassHeader/styles.module.scss
+++ b/frontEnd/src/Components/ui/Player/ClassHeader/styles.module.scss
@@ -10,6 +10,10 @@
   color: white;
   margin-left: -15rem;
 
+  @media screen and (max-width: 478px) {
+    padding-left: 0rem;
+  }
+
   aside {
     display: flex;
     h2 {
